[package]
name = "broken-md-links"
description = "A command-line tool and library to detect broken links in Markdown files"
license = "Apache-2.0"
version = "1.2.0"
authors = ["Clément Nerma <clement.nerma@gmail.com>"]
edition = "2018"
repository = "https://github.com/ClementNerma/broken-md-links"

[dependencies]
pulldown-cmark = { version = "0.9.1", default-features = false, features = ["simd"] }
clap = "3.1.18"
log = "0.4.17"
fern = { version = "0.6.1", features = [ "colored" ] }
regex = "1.5.6"
lazy_static = "1.4.0"
colored = "2.0.0"

[[bin]]
name = "broken-md-links"
path = "src/bin/cmd.rs"
